--- a/elizabeth-oyler.html
+++ b/elizabeth-oyler.html
@@ -152,6 +152,21 @@
   .section-list li {
     margin-bottom: 0.35rem;
   }
+
+  @media (max-width: 640px) {
+    .prospect-hero {
+      flex-wrap: wrap;
+    }
+    .meta-list li {
+      flex-direction: column;
+      align-items: flex-start;
+    }
+    .meta-value {
+      text-align: left;
+      margin-left: 0;
+      margin-top: 0.1rem;
+    }
+  }
 </style>
 </head>
 
