--- a/isaac-lief.html
+++ b/isaac-lief.html
@@ -1,6 +1,8 @@
-<!-- ============================= -->
-<!-- MAP BRAND STYLE (GLOBAL) -->
-<!-- ============================= -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<title>Isaac Lief — MAP Scouting Report</title>
 
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Montserrat:wght@300;400;500;600;700&display=swap');
@@ -69,7 +71,6 @@
   .grade-tier {
     font-size: 0.8rem;
     font-weight: 600;
-    margin-bottom: 0.1rem;
   }
 
   .grade-note {
@@ -151,134 +152,124 @@
   .section-list li {
     margin-bottom: 0.35rem;
   }
-
-  @media (max-width: 640px) {
-    .meta-list li {
-      flex-direction: column;
-      align-items: flex-start;
-    }
-    .meta-value {
-      text-align: left;
-      margin-left: 0;
-      margin-top: 0.1rem;
-    }
-  }
 </style>
+</head>
 
+<body>
 <div class="prospect-page">
 
-  <!-- ============================= -->
   <!-- HERO -->
-  <!-- ============================= -->
   <section class="prospect-hero">
     <div class="prospect-hero-main">
       <h1 class="prospect-name">ISAAC LIEF</h1>
-      <p class="prospect-tagline">⭐️⭐️⭐️⭐️ Prospect · Goal Keeper Archetype · Investment Banking Track</p>
+      <p class="prospect-tagline">⭐️⭐️⭐️ Prospect · Goal Keeper Archetype · Investment Banking Track</p>
       <p class="prospect-subtitle">Duke University · Fencing 🤺 · Class of 2028</p>
     </div>
 
     <div class="prospect-grade-card">
       <div class="grade-label">MAP Prospect Grade</div>
-      <div class="grade-score">9.0</div>
-      <div class="grade-tier">Round 2–3 Candidate</div>
-      <div class="grade-note">Round 1 tools; Round 2–3 consistency</div>
+      <div class="grade-score">81</div>
+      <div class="grade-tier">Round 5–6 Candidate</div>
+      <div class="grade-note">Round 1 tools · Round 5–6 consistency</div>
     </div>
   </section>
 
-  <!-- ============================= -->
   <!-- META -->
-  <!-- ============================= -->
   <section class="prospect-meta">
+
     <div class="meta-column">
       <h2 class="meta-title">Prospect Info</h2>
       <ul class="meta-list">
-        <li><span class="meta-key">School</span><span class="meta-value">Duke University</span></li>
-        <li><span class="meta-key">Major</span><span class="meta-value">Computer Science &amp; Statistics</span></li>
-        <li><span class="meta-key">Minor</span><span class="meta-value">Finance</span></li>
-        <li><span class="meta-key">Year</span><span class="meta-value">2028</span></li>
-        <li><span class="meta-key">Sport</span><span class="meta-value">Fencing</span></li>
-        <li><span class="meta-key">Hometown</span><span class="meta-value">Pelham, NY</span></li>
+        <li><span>School</span><span class="meta-value">Duke University</span></li>
+        <li><span>Major</span><span class="meta-value">Computer Science &amp; Statistics</span></li>
+        <li><span>Minor</span><span class="meta-value">Finance</span></li>
+        <li><span>Year</span><span class="meta-value">2028</span></li>
+        <li><span>Sport</span><span class="meta-value">Fencing</span></li>
+        <li><span>Hometown</span><span class="meta-value">Pelham, NY</span></li>
       </ul>
     </div>
 
     <div class="meta-column">
       <h2 class="meta-title">MAP Profile</h2>
       <ul class="meta-list">
-        <li><span class="meta-key">Fall Rank</span><span class="meta-value">18 / 63</span></li>
-        <li><span class="meta-key">GPA</span><span class="meta-value">3.96</span></li>
-        <li><span class="meta-key">Personality</span><span class="meta-value">5. Goal Keeper</span></li>
-        <li><span class="meta-key">Performance</span>
+        <li><span>Official Points</span><span class="meta-value">718.5</span></li>
+        <li><span>Cumulative Rank</span><span class="meta-value">27 / 63</span></li>
+        <li><span>Phase 1 Rank</span><span class="meta-value">18 / 63</span></li>
+        <li><span>Phase 2 Rank</span><span class="meta-value">27 / 30</span></li>
+        <li>
+          <span>Personality</span>
           <span class="meta-value">
-            On-paper Round 1 profile; missed / incomplete assignments; shows up when stakes are highest
+            5. Goal Keeper<br>
+            (Input-driven · accountable · process-focused)
+          </span>
+        </li>
+        <li>
+          <span>Leadership</span>
+          <span class="meta-value">
+            Autocratic Leader<br>
+            (Decisive · directional · performance-oriented)
           </span>
         </li>
       </ul>
     </div>
+
   </section>
 
-  <!-- ============================= -->
   <!-- OVERVIEW -->
-  <!-- ============================= -->
   <section class="prospect-section">
     <h2 class="section-title">Overview</h2>
     <p class="section-body">
-      On paper and in live interviews, Isaac may be the strongest overall Diamond League prospect in this class.
-      A 3.96 GPA in Computer Science &amp; Statistics with a Finance minor at Duke, paired with Division I fencing,
-      gives him an academic and analytical platform that looks like a prototypical Round 1 front-office profile.
-      He presents calmly, thinks structurally, and brings a mature, input-focused mindset that fits directly with
-      the Goal Keeper archetype — controlling what he can through discipline, preparation, and work ethic.
+      Isaac is one of the most naturally gifted prospects in the Diamond League class — the rare candidate whose 
+      academic horsepower, technical ceiling, and competitive background look like a prototypical Round 1 analyst 
+      profile. With a 3.96 GPA in Computer Science & Statistics at Duke and a disciplined Division I fencing 
+      schedule, he brings a level of structure, composure, and analytical fluency far above the average first-year prospect.
       <br><br>
-      In high-visibility moments, Isaac delivers. He tends to rise to the occasion “when the lights are brightest,”
-      performing well in interviews and live settings. However, his MAP season also includes several missed or
-      incomplete assignments, which introduces questions around reliability and consistency in the day-to-day work.
-      The talent, intellect, and demeanor are clearly Round 1; the file tells a more complicated story.
+      Where his file diverges is consistency. Isaac performs at a high level when the stakes are elevated — interviews, 
+      live sessions, or high-visibility touchpoints — but struggled to maintain the same urgency and reliability 
+      across the full MAP calendar. Several missed or incomplete assignments created a gap between his Round 1 
+      potential and Round 5–6 execution.
       <br><br>
-      For firms willing to bet on upside and provide structure, Isaac represents a potential high-upside analyst
-      whose blend of technical horsepower, composure, and process orientation can translate into a long-term win.
-      For others, the inconsistency may be a gating consideration unless he closes the gap between his ceiling and
-      his everyday habits.
+      The encouraging piece: every signal suggests this gap is fixable. His mindset is deeply input-driven, his 
+      interview presence is poised, and his technical foundation is elite. With more disciplined week-to-week 
+      follow-through, Isaac has the ceiling to emerge as a high-upside analyst for firms that value long-term 
+      development and raw intellectual horsepower.
     </p>
   </section>
 
-  <!-- ============================= -->
   <!-- STRENGTHS -->
-  <!-- ============================= -->
   <section class="prospect-section">
     <h2 class="section-title">Strengths</h2>
     <ul class="section-list">
-      <li><strong>Elite academic profile:</strong> 3.96 GPA in CS &amp; Statistics with a Finance minor at Duke — rare technical and quantitative mix.</li>
-      <li><strong>Goal Keeper mindset:</strong> Deep focus on controllable inputs; disciplined approach to preparation and effort.</li>
-      <li><strong>Interview performance:</strong> Presents as calm, thoughtful, and structured; projects as a high-floor behavioral and technical interviewer.</li>
-      <li><strong>Analytical ceiling:</strong> Strong quantitative toolkit that can translate quickly into modeling, problem-solving, and data-driven work.</li>
-      <li><strong>Competitive background:</strong> Fencing builds focus, timing, and decision-making under pressure — all transferable to deal environments.</li>
-      <li><strong>Mature perspective:</strong> Understands the relationship between process and outcomes; embraces responsibility for input, not excuses.</li>
+      <li><strong>Elite academic profile:</strong> 3.96 GPA in CS & Statistics — rare mix of technical precision and analytical depth.</li>
+      <li><strong>High-stakes performer:</strong> Shows up strongest in interviews and marquee MAP moments.</li>
+      <li><strong>Goal Keeper mindset:</strong> Disciplined, accountable, and committed to strong inputs.</li>
+      <li><strong>Technical ceiling:</strong> Strong quantitative skillset that can translate quickly in banking or consulting roles.</li>
+      <li><strong>Division I athletic rigor:</strong> Fencing builds timing, pressure-management, and composure.</li>
+      <li><strong>Poised communicator:</strong> Calm, structured thinker with strong professional presence.</li>
     </ul>
   </section>
 
-  <!-- ============================= -->
   <!-- AREAS FOR DEVELOPMENT -->
-  <!-- ============================= -->
   <section class="prospect-section">
     <h2 class="section-title">Areas for Development</h2>
     <ul class="section-list">
-      <li>Missed and incomplete MAP assignments raise concerns about reliability and follow-through.</li>
-      <li>Needs to show the same intensity on routine work as he does in marquee “lights on” moments.</li>
-      <li>Must tighten time management and workload planning to match Round 1 ability with Round 1 consistency.</li>
+      <li>Needs stronger week-to-week reliability to match Round 1 ability with Round 1 consistency.</li>
+      <li>Must apply the same intensity to routine assignments that he brings to high-stakes environments.</li>
+      <li>Improving time management will help close the gap between potential and execution.</li>
     </ul>
   </section>
 
-  <!-- ============================= -->
   <!-- PROJECTION -->
-  <!-- ============================= -->
   <section class="prospect-section">
     <h2 class="section-title">Projection</h2>
     <p class="section-body">
-      A Round 2–3 MAP prospect with genuine Round 1 game. Isaac’s academic pedigree, technical ceiling, and 
-      composure in interviews make him one of the most compelling on-paper candidates in the Diamond League class.
-      If he can close the reliability gap — consistently completing assignments and treating everyday work with 
-      the same urgency as flagship moments — he has the potential to emerge as a standout analyst in competitive 
-      2027 front-office pipelines.
+      A Round 5–6 MAP prospect with undeniable Round 1 talent. Isaac’s technical upside, composure, and intellectual 
+      horsepower give him a high long-term ceiling. If he tightens reliability and embraces consistent follow-through, 
+      he has the potential to rise rapidly in competitive 2027 investment banking and consulting pipelines.
     </p>
   </section>
 
 </div>
+</body>
+</html>
+
