--- a/jamie-reidy.html
+++ b/jamie-reidy.html
@@ -1,6 +1,8 @@
-<!-- ============================= -->
-<!-- MAP BRAND STYLE (GLOBAL) -->
-<!-- ============================= -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<title>Jamie Reidy — MAP Scouting Report</title>
 
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Montserrat:wght@300;400;500;600;700&display=swap');
@@ -22,6 +24,12 @@
     background: #2E5084;
     color: #ffffff;
     margin-bottom: 1.5rem;
+  }
+
+  .prospect-hero-main {
+    flex: 1 1 60%;
+    max-width: 70%;
+    min-width: 260px;
   }
 
   .prospect-name {
@@ -164,86 +172,123 @@
     }
   }
 </style>
+</head>
 
+<body>
 <div class="prospect-page">
 
+  <!-- HERO -->
   <section class="prospect-hero">
     <div class="prospect-hero-main">
       <h1 class="prospect-name">JAMIE REIDY</h1>
-      <p class="prospect-tagline">⭐️⭐️⭐️⭐️ Prospect · Captain Contention · Investment Banking Track</p>
+      <p class="prospect-tagline">⭐️⭐️⭐️⭐️ Prospect · Podium Sweep Archetype · Investment Banking Track</p>
       <p class="prospect-subtitle">Harvard University · Rowing 🚣 · Class of 2028</p>
     </div>
 
     <div class="prospect-grade-card">
       <div class="grade-label">MAP Prospect Grade</div>
-      <div class="grade-score">9.5</div>
-      <div class="grade-tier">Round 2–3 Candidate</div>
-      <div class="grade-note">Captain-caliber performer</div>
+      <div class="grade-score">91</div>
+      <div class="grade-tier">Round 1–2 Candidate</div>
+      <div class="grade-note">Captain-caliber performer with Podium Sweep motor</div>
     </div>
   </section>
 
+  <!-- META -->
   <section class="prospect-meta">
+    <!-- Prospect Info -->
     <div class="meta-column">
       <h2 class="meta-title">Prospect Info</h2>
       <ul class="meta-list">
-        <li><span class="meta-key">School</span><span class="meta-value">Harvard University</span></li>
-        <li><span class="meta-key">Major</span><span class="meta-value">Applied Mathematics</span></li>
-        <li><span class="meta-key">Minor</span><span class="meta-value">N/A</span></li>
-        <li><span class="meta-key">Year</span><span class="meta-value">2028</span></li>
-        <li><span class="meta-key">Sport</span><span class="meta-value">Rowing</span></li>
-        <li><span class="meta-key">Hometown</span><span class="meta-value">Bedford, NH</span></li>
+        <li><span>School</span><span class="meta-value">Harvard University</span></li>
+        <li><span>Major</span><span class="meta-value">Applied Mathematics</span></li>
+        <li><span>Minor</span><span class="meta-value">N/A</span></li>
+        <li><span>Year</span><span class="meta-value">2028</span></li>
+        <li><span>GPA</span><span class="meta-value">3.93</span></li>
+        <li><span>Sport</span><span class="meta-value">Rowing 🚣</span></li>
+        <li><span>Hometown</span><span class="meta-value">Bedford, NH</span></li>
       </ul>
     </div>
 
+    <!-- MAP Profile -->
     <div class="meta-column">
       <h2 class="meta-title">MAP Profile</h2>
       <ul class="meta-list">
-        <li><span class="meta-key">Fall Rank</span><span class="meta-value">15 / 63</span></li>
-        <li><span class="meta-key">GPA</span><span class="meta-value">3.93</span></li>
-        <li><span class="meta-key">Personality</span><span class="meta-value">10. Podium Sweep</span></li>
-        <li><span class="meta-key">Secondary</span><span class="meta-value">11. Point Guard</span></li>
-        <li><span class="meta-key">Performance</span><span class="meta-value">All assignments submitted on time</span></li>
+        <li><span>Official Points</span><span class="meta-value">1321</span></li>
+        <li><span>Cumulative Rank</span><span class="meta-value">13 / 63</span></li>
+        <li><span>Phase 1 Rank</span><span class="meta-value">15 / 63</span></li>
+        <li><span>Phase 2 Rank</span><span class="meta-value">13 / 30</span></li>
+        <li>
+          <span>Personality</span>
+          <span class="meta-value">
+            10. Podium Sweep<br>
+            (Competitive Personality · relentless goal-setting · discipline under pressure)
+          </span>
+        </li>
+        <li>
+          <span>Leadership</span>
+          <span class="meta-value">
+            Transactional Leader<br>
+            (In-the-Bonus · incentives · accountability)
+          </span>
+        </li>
       </ul>
     </div>
   </section>
 
+  <!-- OVERVIEW -->
   <section class="prospect-section">
     <h2 class="section-title">Overview</h2>
     <p class="section-body">
-      A four-star Podium Sweep competitor with captain upside. Jamie blends varsity rowing discipline with
-      strong quant academics and leadership roles across high-level finance organizations. One of MAP’s most
-      consistent all-season performers — submitted every assignment on time and proactively networked with MAP IB alumni.
+      Jamie is a four-star Podium Sweep competitor with clear captain upside — a profile built on discipline,
+      structure, and steady production over the full fellowship. She balances varsity rowing at Harvard with a
+      demanding Applied Mathematics course load and still manages to show up as one of MAP’s most reliable,
+      all-season contributors.
+      <br><br>
+      Her Podium Sweep wiring shows up in how she approaches work: process-focused, committed to getting better
+      every rep, and comfortable holding herself to a high standard. Layered with a Transactional “In-the-Bonus”
+      leadership style, Jamie is highly responsive to clear expectations and goalposts — she thrives when scoreboards,
+      deadlines, and incentives are visible, and uses them to keep herself and her teammates on pace.
+      <br><br>
+      From a partner lens, she projects as a durable, low-drama analyst who will raise the floor on a class:
+      strong academics, proven time management, and a track record of simply doing the work, on time, the right way.
     </p>
   </section>
 
+  <!-- STRENGTHS -->
   <section class="prospect-section">
     <h2 class="section-title">Strengths</h2>
     <ul class="section-list">
-      <li><strong>Podium Sweep competitor:</strong> Process-driven, disciplined, thrives on reps.</li>
-      <li><strong>Quant foundation:</strong> Probability, linear algebra, econ modeling.</li>
-      <li><strong>Execution volume:</strong> Balances 20+ hours rowing with strong academics.</li>
-      <li><strong>On-time finisher:</strong> Zero missed assignments in MAP.</li>
-      <li><strong>Structured communicator:</strong> Uses deliberate pauses for clarity.</li>
-      <li><strong>Point Guard leadership:</strong> Ops roles in SWS, proctoring, coaching.</li>
-      <li><strong>Active networker:</strong> Regular IB coffee chats with MAP alumni.</li>
+      <li><strong>Podium Sweep competitor:</strong> Competitive Personality with relentless goal-setting and comfort chasing high standards.</li>
+      <li><strong>Quantitative foundation:</strong> Applied Mathematics at Harvard; exposure to probability, linear algebra, and econ modeling.</li>
+      <li><strong>High consistency:</strong> Strong execution across the MAP season with a solid track record of on-time, complete assignments.</li>
+      <li><strong>Rowing discipline:</strong> Balances 20+ hours per week of training and competition with high academic performance.</li>
+      <li><strong>Transactional leadership style:</strong> “In-the-Bonus” leader who responds to and reinforces clear incentives, targets, and accountability.</li>
+      <li><strong>Structured communicator:</strong> Uses deliberate pacing and clear framing; comfortable slowing down to keep responses organized.</li>
+      <li><strong>Professional intent:</strong> Actively networks with MAP IB alumni and seeks out feedback to position herself for front-office roles.</li>
     </ul>
   </section>
 
+  <!-- AREAS FOR DEVELOPMENT -->
   <section class="prospect-section">
     <h2 class="section-title">Areas for Development</h2>
     <ul class="section-list">
-      <li>Prefers straightforward ideas — more exposure to ambiguous problems helpful.</li>
-      <li>Thrives in calm environments; needs more high-pace sprint exposure.</li>
-      <li>Could add more narrative depth in behavioral interviews.</li>
+      <li>Can lean toward straightforward, structured problems — continued exposure to ambiguous, unstructured cases will broaden her range.</li>
+      <li>Would benefit from more “sprint-speed” reps in fast, high-pressure group settings to match her consistency with sharper urgency.</li>
+      <li>Has room to add more vivid, story-driven examples in behavioral interviews to showcase the depth of her experiences.</li>
     </ul>
   </section>
 
+  <!-- PROJECTION -->
   <section class="prospect-section">
     <h2 class="section-title">Projection</h2>
     <p class="section-body">
-      Round 2–3 MAP prospect with clear captain upside. Strong blend of quant skills, discipline, and
-      networking intent. Projects as a durable, high-output future analyst.
+      Jamie grades out as a Round 1–2 MAP prospect with captain-caliber upside. She combines quant skills,
+      varsity-athlete discipline, and a Podium Sweep motor with a reliable, incentives-aware leadership style.
+      In a 2027 analyst class, she projects as a durable, high-output teammate who will quietly stabilize the room,
+      hit deadlines, and raise the standard for preparation and effort.
     </p>
   </section>
 
 </div>
+</body>
+</html>
